# terrapin-rs

./: Cargo.toml  tracecheck.json
spec/: requirements.md  waivers.md
terrapin/: Cargo.toml
terrapin-cli/: Cargo.toml
terrapin-cli/src/: main.rs
terrapin-cli/tests/: cli_it.rs
terrapin/docs/: spec.md  test-plan.md  traceability.md
terrapin/examples/: bench.rs
terrapin/src/: builder.rs  lib.rs  manifest.rs  stream.rs  tree.rs  v3.rs
terrapin/test_data/: hello.txt.pin
terrapin/tests/: builder_it.rs  catsec_it.rs  conformance_it.rs  manifest_it.rs  memory_it.rs  persist_it.rs  property_it.rs  stream_it.rs  transfer_it.rs  validate_it.rs  vectors-terrapin.json
terrapin/tests/common/: mod.rs
