[package]
name = "terrapin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
futures = { version = "0.3.30", features = ["std"] }
gitoid = {git = "https://github.com/fkautz/gitbom-rs", branch = "boring", features = ["boringssl"]}
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "full"] }
hex = "0.4.3"
